# autodoc

./: .cvsignore  .gitignore  ChangeLog  Dockerfile  Makefile  README  README.md  README.org  config.mk.in  configure.ac  dia.tmpl  dot.tmpl  dot_shortfk.tmpl  env-example  html.tmpl  neato.tmpl  postgresql_autodoc.1.in  postgresql_autodoc.pl  regressdatabase.sql  xml.tmpl  zigzag.dia.tmpl
